--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
     <groupId>cz.jirutka.validator</groupId>
     <artifactId>validator-spring</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <packaging>jar</packaging>
 
     <name>validator-spring</name>
@@ -49,7 +49,7 @@
 
     <ciManagement>
         <system>travis</system>
-		<url>https://travis-ci.org/jirutka/validator-spring/</url>
+        <url>https://travis-ci.org/jirutka/validator-spring/</url>
     </ciManagement>
 
 
@@ -116,4 +116,36 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <archive>  
+                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+                    </archive> 
+                </configuration>
+            </plugin>  
+            <plugin>   
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Export-Package>cz.jirutka.validator.spring</Export-Package>
+                        <Private-Package>cz.jirutka.validator.spring.support</Private-Package>
+                    </instructions>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>bundle-manifest</id>
+                        <phase>process-classes</phase>
+                        <goals>    
+                            <goal>manifest</goal>
+                        </goals>   
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
